[RTL Scrollbars] Overlay scrollbars push contents inwards https://bugs.webkit.org/show_bug.cgi?id=156225 <rdar://problem/25137040>

Reviewed by Darin Adler.

Source/WebCore:

The contents should be pushed in by the occupied width of the
scrollbar, which is 0 for overlay scrollbars.

Test: fast/scrolling/rtl-scrollbars-overlay-no-push-contents.html

* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::computeScrollDimensions):

LayoutTests:

* fast/scrolling/rtl-scrollbars-overlay-no-push-contents-expected.html: Added.
* fast/scrolling/rtl-scrollbars-overlay-no-push-contents.html: Added.

Canonical link: https://commits.webkit.org/174611@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@199377 268f45cc-cd09-0410-ab3c-d52691b4dbfc